--- a/index.html
+++ b/index.html
@@ -10,5 +10,100 @@
 </head>
 <body>
   
+  <!-- Header -->
+  <header class="header">
+    <div class="header__top">
+      <img src="img/header_logo.png" alt="TezTour" class="header__top-logo">
+      <p class="header__top-txt">Крупнейший оператор на рынке турестических услуг</p>
+      <div class="header__like">
+        <img src="img/header_like.png" alt="Like" class="header__like-icon">
+        <h5 class="header__like-main">Служба заботы</h5>
+        <h5 class="header__like-clock">24/7</h5>
+      </div>
+      <div class="header__number">
+        <h5 class="header__number-txt">Многоканальный</h5>
+        <div class="header__number-numb">8 800 700-78-78</div>
+      </div>
+      <div class="burger__open">
+        <div class="burger__open-line"></div>
+        <div class="burger__open-line"></div>
+        <div class="burger__open-line"></div>
+      </div>
+      <div class="burger__menu">
+        <div class="burger__menu-inner">
+          <ul class="burger__nav">
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Преимущества</li>
+            </a>
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Направления</li>
+            </a>
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Почему TEZPlus</li>
+            </a>
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Наши награды</li>
+            </a>
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Более 120 офисов</li>
+            </a>
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Отзывы</li>
+            </a>
+            <a href="#" class="burger__nav-link">
+              <li class="burger__nav-link">Контакты</li>
+            </a>
+          </ul>
+          <div class="burger__close">
+            <div class="burger__close-line"></div>
+            <div class="burger__close-line"></div>
+          </div>
+        </div>
+        <div class="burger__end-line"></div>
+        <div class="header__number header__number_menu">
+          <h5 class="header__number-txt">Многоканальный</h5>
+          <div class="header__number-numb">8 800 700-78-78</div>
+          <div class="header__top-btn header__top-btn_menu">
+            <a href="#"><img src="img/header_button-1.svg" alt="Забронировать" class="header__top-btn_svg"></a>
+            <h4 class="header__top-btn_txt">Забронировать</h4>
+          </div>
+        </div>
+      </div>
+      <div class="header__top-btn">
+        <a href="#"><img src="img/header_button-1.svg" alt="Забронировать" class="header__top-btn_svg"></a>
+        <h4 class="header__top-btn_txt">Забронировать</h4>
+      </div>
+    </div>
+    <div class="header__middle">
+      <ul class="header__middle_nav">
+        <a href="#">
+          <li class="header__middle_nav-link">Преимущества</li>
+        </a><a href="#">
+          <li class="header__middle_nav-link">Направления</li>
+        </a><a href="#">
+          <li class="header__middle_nav-link">Почему TEZPlus</li>
+        </a><a href="#">
+          <li class="header__middle_nav-link">Наши награды</li>
+        </a><a href="#">
+          <li class="header__middle_nav-link">Более 120 офисов</li>
+        </a><a href="#">
+          <li class="header__middle_nav-link">Отзывы</li>
+        </a><a href="#">
+          <li class="header__middle_nav-link">Контакты</li>
+        </a>
+      </ul>
+    </div>
+    <div class="header__bottom">
+      <div class="header__box">
+        <img src="img/header_click.png" class="header__box-icon">
+        <h2 class="header__box-title">TEZPlus — онлайн-сервис для <span>самостоятельного бронирования</span> отелей по всему миру от крупнейшего туроператора TEZ TOUR</h2>
+        <button class="header__box-btn">Забронировать номер</button>
+        <img src="img/header_vector.png" class="header__box-circle">
+      </div>
+    </div>
+  </header>
+
+  <script src="js/scripts.js"></script>
+
 </body>
 </html>
