--- a/index.html
+++ b/index.html
@@ -103,6 +103,53 @@
     </div>
   </header>
 
+  <!-- Advantages -->
+  <div class="advantages">
+    <h2 class="advantages-title">Легко выбрать и выгодно забронировать отель, апартаменты или виллу в любой точке планеты</h2>
+    <img src="img/advantages_absolut.svg" class="advantages-absolut">
+    <div class="advantages__body">
+      <div class="advantages__box">
+        <div class="advantages__item">
+          <img src="img/advantages_icon-1-2.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Возможность выбора</span> возвратного или невозвратного тарифа</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-1-2.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Рейтинг</span> известных международных систем бронирования</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-3.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Удобная и безопасная система оплаты</span> всеми российскими картами</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-4-5.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Более 1 000 экскурсий</span> на русском языке</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-4-5.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Доступ к 1 000 000 отелей</span> с мгновенным подтверждением</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-6.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Варианты выбора</span> услуг по страхованию</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-7.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Удобный поиск</span> с автоматическими фильтрами по цене, расположению, категории номеров </p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-8.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Подробное описание</span> отеля, с обозначением на карте и указанием расстояния до аэропорта</p>
+        </div>
+        <div class="advantages__item">
+          <img src="img/advantages_icon-9.png" class="advantages__item-icon">
+          <p class="advantages__item-txt"><span>Предоплата от 25%</span> за проживание, исключая невозвратные тарифы</p>
+        </div>
+      </div>
+      <img src="img/advantages_img.png" alt="TEZPlus" class="advantages__body-img">
+    </div>
+  </div>
+
   <script src="js/scripts.js"></script>
 
 </body>
