--- a/index.html
+++ b/index.html
@@ -150,6 +150,75 @@
     </div>
   </div>
 
+  <!-- Price -->
+  <section class="price">
+    <div class="price__container">
+      <h2 class="price-title">Лидеры продаж</h2>
+      <div class="price__box">
+        <div class="price__item">
+          <img src="img/price_img-1.png" class="price__item-img">
+          <div class="price__item-name">Куба</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-2.png" class="price__item-img">
+          <div class="price__item-name">Франция</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-3.png" class="price__item-img">
+          <div class="price__item-name">Грузия</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-4.png" class="price__item-img">
+          <div class="price__item-name">Италия</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-5.png" class="price__item-img">
+          <div class="price__item-name">Мексика</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-6.png" class="price__item-img">
+          <div class="price__item-name">Саудовская Аравия</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-7.png" class="price__item-img">
+          <div class="price__item-name">Сингапур</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-8.png" class="price__item-img">
+          <div class="price__item-name">Испания</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-9.png" class="price__item-img">
+          <div class="price__item-name">Таиланд</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-10.png" class="price__item-img">
+          <div class="price__item-name">Турция</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-11.png" class="price__item-img">
+          <div class="price__item-name">ОАЭ</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+        <div class="price__item">
+          <img src="img/price_img-12.png" class="price__item-img">
+          <div class="price__item-name">Вьетнам</div>
+          <div class="price__item-link">Забронировать</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="js/scripts.js"></script>
 
 </body>
