--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </header>
 
   <!-- Advantages -->
-  <div class="advantages">
+  <section class="advantages">
     <h2 class="advantages-title">Легко выбрать и выгодно забронировать отель, апартаменты или виллу в любой точке планеты</h2>
     <img src="img/advantages_absolut.svg" class="advantages-absolut">
     <div class="advantages__body">
@@ -148,7 +148,7 @@
       </div>
       <img src="img/advantages_img.png" alt="TEZPlus" class="advantages__body-img">
     </div>
-  </div>
+  </section>
 
   <!-- Price -->
   <section class="price">
@@ -217,6 +217,57 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- About -->
+  <section class="about">
+    <h2 class="about-title">Почему TEZPlus</h2>
+    <h5 class="about-subtitle">Онлайн-агрегатор туристических услуг</h5>
+    <div class="about__box">
+      <div class="about__item">
+        <div class="about__item-bg">
+          <img src="img/about_icon-1.png" class="about__item-bg_icon">
+        </div>
+        <h5 class="about__item-name">Оплата картой банка РФ</h5>
+        <p class="about__item-txt">Возможность оплатить картой выпущенной в банке Российской Федерации</p>
+      </div>
+      <div class="about__item">
+        <div class="about__item-bg">
+          <img src="img/about_icon-2.png" class="about__item-bg_icon">
+        </div>
+        <h5 class="about__item-name">Выгодные цены</h5>
+        <p class="about__item-txt">Благодаря прямым контрактам с множеством отелей и отельными поставщиками, мы находим для вас самую низкую стоимость проживания</p>
+      </div>
+      <div class="about__item">
+        <div class="about__item-bg">
+          <img src="img/about_icon-3.png" class="about__item-bg_icon">
+        </div>
+        <h5 class="about__item-name">Отели в любой точке мира</h5>
+        <p class="about__item-txt">Более 1 000 000 отелей по всему миру на мгновенном подтверждении. Ищите, сравнивайте и бронируйте!</p>
+      </div>
+      <div class="about__item">
+        <div class="about__item-bg">
+          <img src="img/about_icon-4.png" class="about__item-bg_icon">
+        </div>
+        <h5 class="about__item-name">Удобный поиск и умные фильтры</h5>
+        <p class="about__item-txt">Возможность выбора тарифов, категории номеров и услуг, сравнить цены по дате заезда, добавить трансфер или заказать экскурсии</p>
+      </div>
+      <div class="about__item">
+        <div class="about__item-bg">
+          <img src="img/about_icon-5.png" class="about__item-bg_icon">
+        </div>
+        <h5 class="about__item-name">Гибкая оплата</h5>
+        <p class="about__item-txt">Вы сами выбираете способ оплаты. Можно оплатить бронь сразу или внести предоплату от 25% в зависимости от типа тарифа</p>
+      </div>
+      <div class="about__item">
+        <div class="about__item-bg">
+          <img src="img/about_icon-6.png" class="about__item-bg_icon">
+        </div>
+        <h5 class="about__item-name">Служба заботы 24/7</h5>
+        <p class="about__item-txt">Оператор круглосуточно на связи. Поможет забронировать отель онлайн, решить вопрос в поездке или при заселении </p>
+      </div>
+    </div>
+    <button class="about-btn">Забронировать сейчас</button>
   </section>
 
   <script src="js/scripts.js"></script>
