--- a/index.html
+++ b/index.html
@@ -270,6 +270,61 @@
     <button class="about-btn">Забронировать сейчас</button>
   </section>
 
+  <!-- Awards -->
+  <section class="awards">
+    <h2 class="awards-title">Наши награды</h2>
+    <div class="awards__box">
+      <div class="awards__item">
+        <img src="img/awards_1.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — победитель премии «GREEK HOSPITALITY AWARDS 2018-2023» в номинации «Лучший Туроператор»</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_2.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> - победитель конкурса "Выбор года" в Белоруссии в <span class="awards__item-txt_mode">2007</span>, <span class="awards__item-txt_mode">2008</span>, <span class="awards__item-txt_mode">2009</span>, 2010 и 2019 году в номинации "Туроператор года"</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_3.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — член Международной Ассоциации Воздушного Транспорта</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_4.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — официальный агент национального перевозчика «Аэрофлот — российские авиалинии»</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_5.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — победитель премии «Travelers’ Choice Favorites» в номинации «Любимые торговые марки путешественников» в 2016 году</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_6.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — член Российского Союза Туриндустрии</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_7.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — победитель премии потребительского признания «Народная марка 2020» в номинации «Туроператор»</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_8.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — победитель авиационной премии «Крылья России» за <span class="awards__item-txt_modeblue">2009</span>, <span class="awards__item-txt_modeblue">2010</span> и 2011 год в номинации «Туроператор года - партнер воздушного транспорта»</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_9.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — обладатель ордена <span class="awards__item-txt_modeblue">«За профессиональную честь, достоинство и почетную деловую репутацию III степени»</span></p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_10.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — победитель премии <span class="awards__item-txt_modeblue">Friends of Thailand Awards 2008</span> в номинации «Международный туроператор»</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_11.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — обладатель премии <span class="awards__item-txt_modeblue">«Путеводная звезда»</span> в категории «Выездной туризм» Комитета по туризму и гостиничному хозяйству Москвы за 2011 год</p>
+      </div>
+      <div class="awards__item">
+        <img src="img/awards_12.png" class="awards__item-img">
+        <p class="awards__item-txt"> <span class="awards__item-txt_modeX">TEZ TOUR</span> — лауреат ежегодной туристической премии «Звезда Travel.ru» за 2004, 2005, <span class="awards__item-txt_modeblue">2006</span>, <span class="awards__item-txt_modeblue">2007</span>, <span class="awards__item-txt_modeblue">2008</span>, <span class="awards__item-txt_modeblue">2009</span>, 2010 и <span class="awards__item-txt_modeblue">2011</span> год в нескольких номинациях</p>
+      </div>
+    </div>
+  </section>
+
   <script src="js/scripts.js"></script>
 
 </body>
