--- a/index.html
+++ b/index.html
@@ -325,6 +325,38 @@
     </div>
   </section>
 
+  <!-- Office -->
+  <section class="office">
+    <div class="office__top">
+      <img src="img/office_icon.png" class="office__top-img">
+      <h2 class="office__top-title">Более 120 офисов по всей России</h2>
+      <h4 class="office__top-subtitle">TEZ TOUR — это бренд, которому доверяют</h4>
+    </div>
+    <div class="office__box">
+      <div class="office__box-img-1">
+        <img src="img/office_img-1.png" class="office__box-img">
+      </div>
+      <div class="office__box-img-2">
+        <img src="img/office_img-2.png" class="office__box-img">
+      </div>
+      <div class="office__box-img-3">
+        <img src="img/office_img-3.png" class="office__box-img">
+      </div>
+      <div class="office__box-img-4">
+        <img src="img/office_img-4.png" class="office__box-img">
+      </div>
+      <div class="office__box-img-5">
+        <img src="img/office_img-5.png" class="office__box-img">
+      </div>
+      <div class="office__box-img-6">
+        <img src="img/office_img-6.png" class="office__box-img">
+      </div>
+      <div class="office__box-img-7">
+        <img src="img/office_img-7.png" class="office__box-img">
+      </div>
+    </div>
+  </section>
+
   <script src="js/scripts.js"></script>
 
 </body>
