--- a/index.html
+++ b/index.html
@@ -357,6 +357,130 @@
     </div>
   </section>
 
+  <!-- Test -->
+  <section class="test">
+    <div class="test__container">
+      <div class="test-title">Отзывы</div>
+      <img src="img/test_img.png" class="test-absolute">
+      <div class="test__body">
+        <div class="test__item">
+          <div class="test__inner">
+            <div class="test__people">
+              <img src="img/test_people-1.png" class="test__people-photo">
+              <div class="test__people_info">
+                <h4 class="test__people_info-name">Елена</h4>
+                <div class="test__people_stars">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <h5 class="test__people_stars-number">5.0</h5>
+                </div>
+              </div>
+            </div>
+            <p class="test__inner-txt">Наш выбор на данного туроператора пал как минимум по двум причинам. Во-первых, Tez Tour предоставляет относительно бюджетный отдых. А, во-вторых, фирма существует уже длительное время, многие риски сводятся к нулю.</p>
+          </div>
+        </div>
+        <div class="test__item">
+          <div class="test__inner">
+            <div class="test__people">
+              <img src="img/test_people-2.png" class="test__people-photo">
+              <div class="test__people_info">
+                <h4 class="test__people_info-name">Элен Корвин</h4>
+                <div class="test__people_stars">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <h5 class="test__people_stars-number">5.0</h5>
+                </div>
+              </div>
+            </div>
+            <p class="test__inner-txt">С Тез Туром я путешествовала очень много. Наверное, процентов 80 всех моих туристических поездок (не рабочих!) организовывал именно Тез Тур в качестве принимающей стороны. И лично как по мне, так спокойнее, когда «там» тебя встречает крупный оператор, чем непонятная конторка. Все-таки за плечами у Тез Тура многолетний опыт, огромная финансовая поддержка, свой автопарк и прочее...</p>
+          </div>
+        </div>
+        <div class="test__item">
+          <div class="test__inner">
+            <div class="test__people">
+              <img src="img/test_people-3.png" class="test__people-photo">
+              <div class="test__people_info">
+                <h4 class="test__people_info-name">Alena1130</h4>
+                <div class="test__people_stars">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <h5 class="test__people_stars-number">5.0</h5>
+                </div>
+              </div>
+            </div>
+            <p class="test__inner-txt">Отель на Кипре в который я полетела от Тез Тура я выбирала 2месяца,читала отзывы и не промахнулась. Что я хотела? Чтобы он был небольшой,человек 200 отдыхающих, желательно поменьше детей и чтобы он был не зачуханным, в центре города и недалеко от пляжа.Под эти критерии подошел отель на Кипре Тася Марис Сисонс 4 звезды.</p>
+          </div>
+        </div>
+        <div class="test__item">
+          <div class="test__inner">
+            <div class="test__people">
+              <img src="img/test_people-4.png" class="test__people-photo">
+              <div class="test__people_info">
+                <h4 class="test__people_info-name">Странник1990</h4>
+                <div class="test__people_stars">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <h5 class="test__people_stars-number">5.0</h5>
+                </div>
+              </div>
+            </div>
+            <p class="test__inner-txt">Очень приятно удивил и порадовал туроператор «Тез тур» Обычно мы с мужем любим путешествовать самостоятельно, но в марте этого года были очень привлекательные цены у этого туроператора на путевки в Объединенные арабские эмираты. В связи с коронавирусом ситуация становилась напряженной мы это понимали, но все таки рискнули поехать. Накануне поездки по электронной почте мы получили вот такой ваучер.</p>
+          </div>
+        </div>
+        <div class="test__item">
+          <div class="test__inner">
+            <div class="test__people">
+              <img src="img/test_people-5.png" class="test__people-photo">
+              <div class="test__people_info">
+                <h4 class="test__people_info-name">Васильич</h4>
+                <div class="test__people_stars">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <h5 class="test__people_stars-number">5.0</h5>
+                </div>
+              </div>
+            </div>
+            <p class="test__inner-txt">Один из самых моих любимых туроператоров. Их уважают за рубежом во многих странах. Сам неоднократно убеждался в этом. В отелях, если узнавали, что вы от Tez Tour, всегда вежливо обслуживали и охотней шли на встречу.</p>
+          </div>
+        </div>
+        <div class="test__item">
+          <div class="test__inner">
+            <div class="test__people">
+              <img src="img/test_people-6.png" class="test__people-photo">
+              <div class="test__people_info">
+                <h4 class="test__people_info-name">julia mamochka</h4>
+                <div class="test__people_stars">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <img src="img/test_star.svg" class="test__people_stars-star">
+                  <h5 class="test__people_stars-number">5.0</h5>
+                </div>
+              </div>
+            </div>
+            <p class="test__inner-txt">Мне кажется, об этой фирме мало кто не слышал. Даже совсем не путешествующие люди знают про этого туропартора, все-таки имя на слуху. Все свои заграничные туры мы покупали только через TEZ. Организация тура всегда на очень хорошем уровне. Выбор отелей огромный, организация крупная, поэтому они сотрудничают практически со всеми.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="js/scripts.js"></script>
 
 </body>
