--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/fonts.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/style.min.css">
   <title>TezTour</title>
 </head>
 <body>
@@ -32,25 +32,25 @@
       <div class="burger__menu">
         <div class="burger__menu-inner">
           <ul class="burger__nav">
-            <a href="#" class="burger__nav-link">
+            <a href="#advantages" class="burger__nav-link">
               <li class="burger__nav-link">Преимущества</li>
             </a>
-            <a href="#" class="burger__nav-link">
+            <a href="#price" class="burger__nav-link">
               <li class="burger__nav-link">Направления</li>
             </a>
-            <a href="#" class="burger__nav-link">
+            <a href="#about" class="burger__nav-link">
               <li class="burger__nav-link">Почему TEZPlus</li>
             </a>
-            <a href="#" class="burger__nav-link">
+            <a href="#awards" class="burger__nav-link">
               <li class="burger__nav-link">Наши награды</li>
             </a>
-            <a href="#" class="burger__nav-link">
+            <a href="#office" class="burger__nav-link">
               <li class="burger__nav-link">Более 120 офисов</li>
             </a>
-            <a href="#" class="burger__nav-link">
+            <a href="#test" class="burger__nav-link">
               <li class="burger__nav-link">Отзывы</li>
             </a>
-            <a href="#" class="burger__nav-link">
+            <a href="#contact" class="burger__nav-link">
               <li class="burger__nav-link">Контакты</li>
             </a>
           </ul>
@@ -76,19 +76,19 @@
     </div>
     <div class="header__middle">
       <ul class="header__middle_nav">
-        <a href="#">
+        <a href="#advantages">
           <li class="header__middle_nav-link">Преимущества</li>
-        </a><a href="#">
+        </a><a href="#price">
           <li class="header__middle_nav-link">Направления</li>
-        </a><a href="#">
+        </a><a href="#about">
           <li class="header__middle_nav-link">Почему TEZPlus</li>
-        </a><a href="#">
+        </a><a href="#awards">
           <li class="header__middle_nav-link">Наши награды</li>
-        </a><a href="#">
+        </a><a href="#office">
           <li class="header__middle_nav-link">Более 120 офисов</li>
-        </a><a href="#">
+        </a><a href="#test">
           <li class="header__middle_nav-link">Отзывы</li>
-        </a><a href="#">
+        </a><a href="#contact">
           <li class="header__middle_nav-link">Контакты</li>
         </a>
       </ul>
@@ -104,7 +104,7 @@
   </header>
 
   <!-- Advantages -->
-  <section class="advantages">
+  <section class="advantages" id="advantages">
     <h2 class="advantages-title">Легко выбрать и выгодно забронировать отель, апартаменты или виллу в любой точке планеты</h2>
     <img src="img/advantages_absolut.svg" class="advantages-absolut">
     <div class="advantages__body">
@@ -151,7 +151,7 @@
   </section>
 
   <!-- Price -->
-  <section class="price">
+  <section class="price" id="price">
     <div class="price__container">
       <h2 class="price-title">Лидеры продаж</h2>
       <div class="price__box">
@@ -220,7 +220,7 @@
   </section>
 
   <!-- About -->
-  <section class="about">
+  <section class="about" id="about">
     <h2 class="about-title">Почему TEZPlus</h2>
     <h5 class="about-subtitle">Онлайн-агрегатор туристических услуг</h5>
     <div class="about__box">
@@ -271,7 +271,7 @@
   </section>
 
   <!-- Awards -->
-  <section class="awards">
+  <section class="awards" id="awards">
     <h2 class="awards-title">Наши награды</h2>
     <div class="awards__box">
       <div class="awards__item">
@@ -326,7 +326,7 @@
   </section>
 
   <!-- Office -->
-  <section class="office">
+  <section class="office" id="office">
     <div class="office__top">
       <img src="img/office_icon.png" class="office__top-img">
       <h2 class="office__top-title">Более 120 офисов по всей России</h2>
@@ -358,7 +358,7 @@
   </section>
 
   <!-- Test -->
-  <section class="test">
+  <section class="test" id="test">
     <div class="test__container">
       <div class="test-title">Отзывы</div>
       <img src="img/test_img.png" class="test-absolute">
@@ -479,6 +479,12 @@
         </div>
       </div>
     </div>
+  </section>
+
+  <!-- Contact -->
+  <section class="contact" id="contact">
+    <h2 class="contact-title">Контакты</h2>
+    <img src="img/contact_bg.png" class="contact-img">
   </section>
 
   <script src="js/scripts.js"></script>
